# hello_nerves_poncho

./: LICENSE  README.md  flake.nix  shell.nix
.github/: dependabot.yml
.github/actions/elixir-setup/: action.yml
.github/workflows/: build.yml  pull_request.yml
firmware/: mix.exs  shell.nix
firmware/lib/firmware/: application.ex  data_processor.ex  migration_helpers.ex
firmware/lib/firmware/data_processor/: worker.ex
firmware/test/firmware/: data_processor_test.exs
pkgs/hello_nerves_poncho_devshell/: default.nix
python_algo/: mix.exs  pyproject.toml
python_algo/priv/: process_data.py
ui/: mix.exs
ui/lib/ui/accounts/: user.ex
ui/lib/ui_web/: telemetry.ex
ui/lib/ui_web/live/: live_helpers.ex  modal_component.ex  page_live.ex  page_live.html.heex
